syntax = "proto3";
package pb;  // 声明所在包
option go_package = "github.com/seveye/goms/examples/microservice/pb";



message QueryReq {
    string key = 1;
}

message QueryRsp {
    string value = 2;
}


message UpdateReq {
    string key = 1;
    string value = 2;
}

message UpdateRsp {
}